crates/codeowners/tests/snapshots/codeowners_generator_test__codeowners__generates_bitbucket.snap
---
source: crates/codeowners/tests/codeowners_generator_test.rs
expression: "fs::read_to_string(sandbox.path().join(\".bitbucket/CODEOWNERS\")).unwrap()"
---
# Automatically generated by moon. DO NOT MODIFY!
# https://moonrepo.dev/docs/guides/codeowners

# (workspace)
* @admins
/config @infra
/*.js @infra @frontend

# custom-groups
/custom-groups/path/with\ space/ @@@group

# list-paths
/list-paths/*.{js,ts,tsx} @frontend
/list-paths/*.config.js @frontend

# map-paths
/map-paths/*.rs @rust-dev @api-team
/map-paths/config/ @backend
